tests/snapshots/integration__integration_tests__help__help_config_shell.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - config
    - shell
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt config shell - Shell integration setup
Usage: wt config shell [OPTIONS] <COMMAND>

Commands:
  init       Generate shell integration code
  install    Write shell integration to config files
  uninstall  Remove shell integration from config files

Options:
  -h, --help
          Print help

Global Options:
  -C <path>
          Working directory for this command

      --config <path>
          User config file path

  -v, --verbose
          Show commands and debug info
